Prevent toolbar from covering up the content.

--- a/react/stylesheets/partials/_page.scss
+++ b/react/stylesheets/partials/_page.scss
@@ -496,6 +496,9 @@
 
 /*! responsive-nav.js v1.0.14 by @viljamis */
 
+#dashboard {
+  padding-bottom: 65px; // height of #navigation-toggle
+}
 
 nav[role=navigation] {
 clear : both;
